# tw-light

./: .gitignore  AUTHORS  CNAME  COPYING  Makefile.am  README  THANKS  autogen.sh  configure.ac  dat.vcxproj  dat.vcxproj.filters  grabber.vcxproj  grabber.vcxproj.filters  makefile.win32  tw-light.desktop  tw-light.rc  tw-light.sln  tw-light.vcproj  tw-light.vcxproj  tw-light.vcxproj.filters
data/: client.ini  fleets.ini  ingame.txt  palette  readme.html  scp.ini  server.ini  shpaktgu.ini  shpalabc.ini  shpalabc.txt  shpalckr.ini  shpalckr.txt  shpalhdr.ini  shpalhdr.txt  shpandgu.ini  shpandgu.txt  shparisk.ini  shparisk.txt  shparitr.ini  shparitr.txt  shparkpi.ini  shparkpi.txt  shpartem.ini  shpastba.ini  shpastba.txt  shpayrbs.ini  shpayrbs.txt  shpayrbs_layout.txt  shpbahbu.ini  shpbatde.ini  shpbatde.txt  shpbipka.ini  shpbipka.txt  shpbogce.ini  shpbubbo.ini  shpbubbo.txt  shpbubex.ini  shpchebr.ini  shpchebr.txt  shpchmav.ini  (+265 more)
doc/: Doxyfile  permissions.txt
doc/TW plot/: Credits.doc  Ending.doc  Intro.doc  Prolog.doc  plot.htm  plot.ppt
doc/TW plot/Back Home/: Finding Fwiffo.doc  Framed.doc  Gettings Talana.doc  State of the Home quardrant.doc
doc/TW plot/Extras/: Dates with Talana.doc  Helping the Jyglar.doc  Khar Championship.doc  Menacers.doc  More about the Mrn.doc  Quasispace portal spawners.doc  Sites devices and characters in the game.doc  The Andtrosynth Survivors.doc  The Manglers Queen.doc  The Melnorme Stations.doc  The NAFS station.doc  The Shofixti HW.doc  The Slylendro quest.doc  The escaping Ur-quan.doc  The supox expedition.doc
doc/TW plot/New Dangers/: AI.doc  Finding the MK2.doc  Khar quest.doc  Kterbi.doc  Mokopo quest.doc  Okkara quest.doc  Story of the Mrn.doc
doc/TW plot/New Races/: AI.doc  Alkory.doc  Denrode.doc  Estion.doc  Ger.doc  Guph.doc  Jyglar.doc  Khar.doc  Kterbi.doc  Mmrnmhrm.doc  Mokopo.doc  Mrii.doc  New Arm Melnorme.doc  Niko.doc  Okk'ara.doc  Space Monster Mangler.doc
doc/TW plot/The New Arm Adventures/: The Mrn threat.doc
doc/TW plot/The REAL threat/: Defending against “possession” .doc  Final Battle.doc  Finding the Precursor factory.doc  Stopping the Mother Ark.doc  The AIs power.doc
doc/TW plot/plot.files/: filelist.xml  frame.htm  fullscreen.htm  master01.htm  master02.htm  master03.htm  (+21 more)
scripts/: gen_datafiles_interface.py  gen_register_ships.py  stacktrace.pl  timewarp.ini  timewarp.nsi  update_victory_ditty.py
src/: .gitignore  Makefile.am  ais.h  doxygen.cpp  frame.cpp  frame.h  gui.cpp  gui.h  id.h  input.cpp  input.h  melee.h  scp.cpp  scp.h  scpgui.cpp  scpgui.h  ship.h
src/ais/: c_input.cpp  c_other.cpp  c_wussie.cpp
src/datafiles/: gen_scpgui.c  gen_scpgui.h  gen_victoryditty.c  gen_victoryditty.h
src/games/: gastroid.cpp  gdefender.cpp  gflmelee.cpp  gflmelee.h  ggob.cpp  ggob.h
src/libraries/: Makefile.am
src/libraries/agup/: aalg.c  aalg.h  aase.c  aase.h  abeos.c  abeos.h  abitmap.c  agtk.c  agtk.h  agup.c  agup.h  agupitrn.h  ans.c  ans.h  aphoton.c  aphoton.h  awin95.c  awin95.h
src/libraries/allegro/src/: allegro.c  config.c  file.c  fli.c  fsel.c  graphics.c  keyboard.c  midi.c  rsfb.c  tga.c
src/libraries/allegro/src/beos/: bdwindow.cpp  bwindow.cpp  bwscreen.cpp
src/libraries/allegro/src/linux/: ljoy.c  lmsedrv.c  tslib.c
src/libraries/allegro/src/macosx/: qzfull.m
src/libraries/allegro/src/psp/: pdrivers.c  pfile.c  pgfx.c  pjoy.c  pkey.c  pmain.c  pmouse.c  psound.c  psystem.c  ptimer.c  pvram.c  pvtable8.c
src/libraries/allegro/src/unix/: alsamidi.c  umodules.c  usystem.c
src/libraries/allegro/src/win/: dllver.rc  wddbmpl.c  wddovl.c  wdispsw.c  wgdi.c  winput.c  wjoydx.c  wkeybd.c  wmouse.c  wsystem.c  wwnd.c
src/libraries/allegro/src/x/: xkeyboard.c  xwin.c
src/libraries/allegro/tools/: datedit.c  grabber.c  plugins.h
src/libraries/allegro/tools/plugins/: datgrab.c  datgrid.c
src/melee/: manim.cpp  manim.h  mcbodies.cpp  mcbodies.h  mcontrol.cpp  mcontrol.h  mfleet.cpp  mfleet.h  mframe.cpp  mframe.h  mgame.cpp  mgame.h  mhelpers.cpp  mitems.cpp  mitems.h  mlog.cpp  mlog.h  mmain.cpp  mmain.h  mmath.cpp  mnet1.cpp  mnet1.h  moptions.cpp  moptions.h  mship.cpp  mship.h  mshot.cpp  mshot.h  mshpdata.cpp  mshppan.cpp  mshppan.h  msprite.cpp  mtarget.cpp  mtarget.h  mvideoevent.h  mvideosystem.cpp  mvideosystem.h  mvideowindow.cpp  mvideowindow.h  mview.cpp  (+1 more)
src/other/: configrw.cpp  configrw.h  dialogs.cpp  dialogs.h  fontmorph.cpp  fontmorph.h  gameconf.cpp  gameconf.h  gup.cpp  gup.h  nullphas.cpp  nullphas.h  objanim.cpp  objanim.h  orbit.cpp  orbit.h  planet3d.cpp  planet3d.h  radar.cpp  radar.h  shippart.cpp  shippart.h  twconfig.cpp  twconfig.h  vbodies.cpp  vbodies.h  vtarget.cpp  vtarget.h
src/ships/: Makefile.am  _howto_1.cpp  _howto_2.cpp  gen_ships.cpp  shpaktgu.cpp  shpalabc.cpp  shpalckr.cpp  shpalhdr.cpp  shpandgu.cpp  shpandgu.h  shparisk.cpp  shparisk.h  shparitr.cpp  shparkpi.cpp  shpartem.cpp  shpastba.cpp  shpayrbs.cpp  shpbahbu.cpp  shpbatde.cpp  shpbipka.cpp  shpbogce.cpp  shpbubbo.cpp  shpbubex.cpp  shpchebr.cpp  shpchebr.h  shpchmav.cpp  shpchmav.h  shpchmba.cpp  shpchoex.cpp  shpclapi.cpp  shpclofl.cpp  shpconca.cpp  shpconho.cpp  shpcrapl.cpp  shpcresu.cpp  shpcrore.cpp  shpdajem.cpp  shpdakvi.cpp  shpdeees.cpp  shpdjila.cpp  (+153 more)
src/ships/unused/: shpastba.cpp  shpcresu.cpp  shpfresc.cpp  shpgerra.cpp  shphotsp.cpp  shpkabwe.cpp  shpmontr.cpp  shpterbi.cpp  shpwassu.cpp
src/twgui/: gamebuttonevent.h  twbutton.cpp  twbutton.h  twbuttontypes.cpp  twbuttontypes.h  twgui.cpp  twgui.h  twgui_infot.txt  twhelpers.cpp  twhelpers.h  twmenuexamples.cpp  twmenuexamples.h  twpopup.cpp  twpopup.h  twwindow.cpp  twwindow.h  utils.cpp  utils.h
src/util/: aarot.c  aastr.c  aastr.h  aautil.c  aautil.h  base.cpp  base.h  endian.cpp  endian.h  errors.cpp  errors.h  errors_c.c  get_time.c  get_time.h  helper.c  helper.cpp  helper.h  history.cpp  history.h  pmask.c  pmask.h  port.h  port_allegro.c  random.cpp  random.h  round.c  round.h  sounds.cpp  sounds.h  types.cpp  types.h  vector2.cpp  vector2.h
tests/: testdatapath.cpp  testmain.cpp
