## Process this file with automake to produce Makefile.in

SUBDIRS = src

GAMEDATA = \
data/client.ini \
data/fleets.ini \
data/fonts.dat \
data/gob.dat \
data/ingame.txt \
data/melee.dat \
data/palette \
data/readme.html \
data/scp.ini \
data/server.ini \
data/shpaktgu.dat \
data/shpaktgu.ini \
data/shpaktgu.txt \
data/shpalabc.dat \
data/shpalabc.ini \
data/shpalabc.txt \
data/shpalckr.dat \
data/shpalckr.ini \
data/shpalckr.txt \
data/shpalhdr.dat \
data/shpalhdr.ini \
data/shpalhdr.txt \
data/shpandgu.dat \
data/shpandgu.ini \
data/shpandgu.txt \
data/shparisk.dat \
data/shparisk.ini \
data/shparisk.txt \
data/shparitr.dat \
data/shparitr.ini \
data/shparitr.txt \
data/shparkpi.dat \
data/shparkpi.ini \
data/shparkpi.txt \
data/shpartem.dat \
data/shpartem.ini \
data/shpartem.txt \
data/shpastba.dat \
data/shpastba.ini \
data/shpastba.txt \
data/shpayrbs.dat \
data/shpayrbs.ini \
data/shpayrbs.txt \
data/shpayrbs_layout.txt \
data/shpbahbu.dat \
data/shpbahbu.ini \
data/shpbahbu.txt \
data/shpbatde.dat \
data/shpbatde.ini \
data/shpbatde.txt \
data/shpbipka.dat \
data/shpbipka.ini \
data/shpbipka.txt \
data/shpbogce.dat \
data/shpbogce.ini \
data/shpbogce.txt \
data/shpbubbo.dat \
data/shpbubbo.ini \
data/shpbubbo.txt \
data/shpbubex.dat \
data/shpbubex.ini \
data/shpbubex.txt \
data/shpchebr.dat \
data/shpchebr.ini \
data/shpchebr.txt \
data/shpchmav.dat \
data/shpchmav.ini \
data/shpchmav.txt \
data/shpchmba.dat \
data/shpchmba.ini \
data/shpchmba.txt \
data/shpchoex.dat \
data/shpchoex.ini \
data/shpchoex.txt \
data/shpclapi.dat \
data/shpclapi.ini \
data/shpclofl.dat \
data/shpclofl.ini \
data/shpclofl.txt \
data/shpconca.dat \
data/shpconca.ini \
data/shpconca.txt \
data/shpconho.dat \
data/shpconho.ini \
data/shpconho.txt \
data/shpcrapl.dat \
data/shpcrapl.ini \
data/shpcrapl.txt \
data/shpcresu.dat \
data/shpcresu.ini \
data/shpcresu.txt \
data/shpcrore.dat \
data/shpcrore.ini \
data/shpcrore.txt \
data/shpdajem.dat \
data/shpdajem.ini \
data/shpdajem.txt \
data/shpdakvi.dat \
data/shpdakvi.ini \
data/shpdeees.dat \
data/shpdeees.ini \
data/shpdeees.txt \
data/shpdjila.dat \
data/shpdjila.ini \
data/shpdjila.txt \
data/shpdooco.dat \
data/shpdooco.ini \
data/shpdragr.dat \
data/shpdragr.ini \
data/shpdragr.txt \
data/shpdruma.dat \
data/shpdruma.ini \
data/shpdruma.txt \
data/shpducla.dat \
data/shpducla.ini \
data/shpducla.txt \
data/shpdyzha.dat \
data/shpdyzha.ini \
data/shpdyzha.txt \
data/shpearc2.dat \
data/shpearc2.ini \
data/shpearc2.txt \
data/shpearc3.dat \
data/shpearc3.ini \
data/shpearc3.txt \
data/shpearcr.dat \
data/shpearcr.ini \
data/shpearcr.txt \
data/shpestgu.dat \
data/shpestgu.ini \
data/shpestgu.txt \
data/shpexqen.dat \
data/shpexqen.ini \
data/shpfiear.dat \
data/shpfiear.ini \
data/shpfiear.txt \
data/shpfopsl.dat \
data/shpfopsl.ini \
data/shpfopsl.txt \
data/shpforsh.dat \
data/shpforsh.ini \
data/shpforsh.txt \
data/shpfresc.dat \
data/shpfresc.ini \
data/shpfresc.txt \
data/shpfweav.dat \
data/shpfweav.ini \
data/shpfweav.txt \
data/shpgahmo.dat \
data/shpgahmo.ini \
data/shpgahmo.txt \
data/shpgarty.dat \
data/shpgarty.ini \
data/shpgarty.txt \
data/shpgerhe.dat \
data/shpgerhe.ini \
data/shpgerhe.txt \
data/shpgeror.dat \
data/shpgeror.ini \
data/shpgeror.txt \
data/shpgerra.dat \
data/shpgerra.ini \
data/shpgerra.txt \
data/shpglacr.dat \
data/shpglacr.ini \
data/shpglacr.txt \
data/shpglads.dat \
data/shpglads.ini \
data/shpglads.txt \
data/shpgluse.dat \
data/shpgluse.ini \
data/shpgluse.txt \
data/shpharra.dat \
data/shpharra.ini \
data/shpherex.dat \
data/shpherex.ini \
data/shphotsp.dat \
data/shphotsp.ini \
data/shphotsp.txt \
data/shphubde.dat \
data/shphubde.ini \
data/shphubde.txt \
data/shphydcr.dat \
data/shphydcr.ini \
data/shphydcr.txt \
data/shpiceco.dat \
data/shpiceco.ini \
data/shpiceco.txt \
data/shpilwav.dat \
data/shpilwav.ini \
data/shpilwav.txt \
data/shpilwsp.dat \
data/shpilwsp.ini \
data/shpilwsp.txt \
data/shpimpka.dat \
data/shpimpka.ini \
data/shpimpka.txt \
data/shpjnkla.dat \
data/shpjnkla.ini \
data/shpjnkla.txt \
data/shpjurcu.dat \
data/shpjurcu.ini \
data/shpjurcu.txt \
data/shpjygst.dat \
data/shpjygst.ini \
data/shpjygst.txt \
data/shpkabwe.dat \
data/shpkabwe.ini \
data/shpkabwe.txt \
data/shpkahbo.dat \
data/shpkahbo.ini \
data/shpkahbo.txt \
data/shpkatpo.dat \
data/shpkatpo.ini \
data/shpkatpo.txt \
data/shpklidr.dat \
data/shpklidr.ini \
data/shpklidr.txt \
data/shpkoaja.dat \
data/shpkoaja.ini \
data/shpkoaja.txt \
data/shpkoapa.dat \
data/shpkoapa.ini \
data/shpkoapa.txt \
data/shpkohma.dat \
data/shpkohma.ini \
data/shpkohma.txt \
data/shpkolfl.dat \
data/shpkolfl.ini \
data/shpkolfl.txt \
data/shpkorsi.dat \
data/shpkorsi.ini \
data/shpkorsi.txt \
data/shpkorsn.dat \
data/shpkorsn.ini \
data/shpkorsn.txt \
data/shpktacr.dat \
data/shpktacr.ini \
data/shpktesa.dat \
data/shpktesa.ini \
data/shpktesa.txt \
data/shpkzedr.dat \
data/shpkzedr.ini \
data/shpkzedr.txt \
data/shpleimu.dat \
data/shpleimu.ini \
data/shpleimu.txt \
data/shplk_sa.dat \
data/shplk_sa.ini \
data/shplyrwa.dat \
data/shplyrwa.ini \
data/shplyrwa.txt \
data/shpmekpi.dat \
data/shpmekpi.ini \
data/shpmekpi.txt \
data/shpmeltr.dat \
data/shpmeltr.ini \
data/shpmeltr.txt \
data/shpmmrxf.dat \
data/shpmmrxf.ini \
data/shpmmrxf.txt \
data/shpmoisp.dat \
data/shpmoisp.ini \
data/shpmoisp.txt \
data/shpmontr.dat \
data/shpmontr.ini \
data/shpmontr.txt \
data/shpmycpo.dat \
data/shpmycpo.ini \
data/shpmycpo.txt \
data/shpnarlu.dat \
data/shpnarlu.ini \
data/shpnarlu.txt \
data/shpneccr.dat \
data/shpneccr.ini \
data/shpneccr.txt \
data/shpneodr.dat \
data/shpneodr.ini \
data/shpneodr.txt \
data/shpnisha.dat \
data/shpnisha.ini \
data/shpnisha.txt \
data/shpoliha.dat \
data/shpoliha.ini \
data/shpoliha.txt \
data/shporzne.dat \
data/shporzne.ini \
data/shporzne.txt \
data/shpostdi.dat \
data/shpostdi.ini \
data/shpostdi.txt \
data/shpostor.dat \
data/shpostor.ini \
data/shpostor.txt \
data/shpowavo.dat \
data/shpowavo.ini \
data/shppanav.dat \
data/shppanav.ini \
data/shppanav.txt \
data/shpphepa.dat \
data/shpphepa.ini \
data/shpphepa.txt \
data/shppkufu.dat \
data/shppkufu.ini \
data/shppkufu.txt \
data/shpplala.dat \
data/shpplala.ini \
data/shpplala.txt \
data/shpplane.dat \
data/shpplane.ini \
data/shpplane.txt \
data/shpplopl.dat \
data/shpplopl.ini \
data/shpqlore.dat \
data/shpqlore.ini \
data/shpqlore.txt \
data/shpquasi.dat \
data/shpquasi.ini \
data/shpquasi.txt \
data/shpquawr.dat \
data/shpquawr.ini \
data/shpquawr.txt \
data/shpraame.dat \
data/shpraame.ini \
data/shpraame.txt \
data/shpradfi.dat \
data/shpradfi.ini \
data/shpradfi.txt \
data/shprekas.dat \
data/shprekas.ini \
data/shprekas.txt \
data/shprogsq.dat \
data/shprogsq.ini \
data/shprogsq.txt \
data/shpsamat.dat \
data/shpsamat.ini \
data/shpsamat.txt \
data/shpscain.ini \
data/shpsclfr.dat \
data/shpsclfr.ini \
data/shpsclfr.txt \
data/shpsefn2.dat \
data/shpsefn2.ini \
data/shpsefn2.txt \
data/shpsefna.dat \
data/shpsefna.ini \
data/shpsefna.txt \
data/shpshosc.dat \
data/shpshosc.ini \
data/shpshosc.txt \
data/shpslypr.dat \
data/shpslypr.ini \
data/shpslypr.txt \
data/shpspael.dat \
data/shpspael.ini \
data/shpspael.txt \
data/shpstaba.dat \
data/shpstaba.ini \
data/shpstaba.txt \
data/shpstrsc.dat \
data/shpstrsc.ini \
data/shpstrsc.txt \
data/shpsupbl.dat \
data/shpsupbl.ini \
data/shpsupbl.txt \
data/shpsyrpe.dat \
data/shpsyrpe.ini \
data/shpsyrpe.txt \
data/shptauar.dat \
data/shptauar.ini \
data/shptauar.txt \
data/shptaubo.dat \
data/shptaubo.ini \
data/shptaubo.txt \
data/shptauda.dat \
data/shptauda.ini \
data/shptauda.txt \
data/shptauem.dat \
data/shptauem.ini \
data/shptauem.txt \
data/shptaufi.dat \
data/shptaufi.ini \
data/shptaufi.txt \
data/shptaugl.dat \
data/shptaugl.ini \
data/shptaugl.txt \
data/shptauhu.dat \
data/shptauhu.ini \
data/shptauhu.txt \
data/shptaule.dat \
data/shptaule.ini \
data/shptaule.txt \
data/shptaumc.dat \
data/shptaumc.ini \
data/shptaumc.txt \
data/shptaume.dat \
data/shptaume.ini \
data/shptaume.txt \
data/shptausl.dat \
data/shptausl.ini \
data/shptausl.txt \
data/shptaust.dat \
data/shptaust.ini \
data/shptaust.txt \
data/shptauto.dat \
data/shptauto.ini \
data/shptauto.txt \
data/shptautu.dat \
data/shptautu.ini \
data/shptautu.txt \
data/shptelno.dat \
data/shptelno.ini \
data/shptelno.txt \
data/shpterbi.dat \
data/shpterbi.ini \
data/shpterbi.txt \
data/shpthrto.dat \
data/shpthrto.ini \
data/shpthrto.txt \
data/shptougr.dat \
data/shptougr.ini \
data/shptougr.txt \
data/shptrige.dat \
data/shptrige.ini \
data/shptrige.txt \
data/shptulra.dat \
data/shptulra.ini \
data/shptulra.txt \
data/shpulzin.dat \
data/shpulzin.ini \
data/shpulzin.txt \
data/shpumgdr.dat \
data/shpumgdr.ini \
data/shpumgdr.txt \
data/shpuosli.dat \
data/shpuosli.ini \
data/shpuosli.txt \
data/shputwde.dat \
data/shputwde.ini \
data/shputwde.txt \
data/shputwju.dat \
data/shputwju.ini \
data/shputwju.txt \
data/shpuxjba.dat \
data/shpuxjba.ini \
data/shpuxjba.txt \
data/shpvelcr.dat \
data/shpvelcr.ini \
data/shpvelcr.txt \
data/shpvenke.dat \
data/shpvenke.ini \
data/shpvenke.txt \
data/shpvezba.dat \
data/shpvezba.ini \
data/shpvezba.txt \
data/shpvioge.dat \
data/shpvioge.ini \
data/shpvioge.txt \
data/shpvirli.dat \
data/shpvirli.ini \
data/shpvirli.txt \
data/shpvuvji.dat \
data/shpvuvji.ini \
data/shpvuvji.txt \
data/shpvuxin.dat \
data/shpvuxin.ini \
data/shpvuxin.txt \
data/shpvyrin.dat \
data/shpvyrin.ini \
data/shpwassu.dat \
data/shpwassu.ini \
data/shpwassu.txt \
data/shpwistr.dat \
data/shpwistr.ini \
data/shpwistr.txt \
data/shpxaaar.dat \
data/shpxaaar.ini \
data/shpxaaar.txt \
data/shpxchex.dat \
data/shpxchex.ini \
data/shpxilcr.dat \
data/shpxilcr.ini \
data/shpxilcr.txt \
data/shpxxxas.dat \
data/shpxxxas.ini \
data/shpxxxas.txt \
data/shpxxxma.dat \
data/shpxxxma.ini \
data/shpxxxma.txt \
data/shpyehte.dat \
data/shpyehte.ini \
data/shpyehte.txt \
data/shpyevme.dat \
data/shpyevme.ini \
data/shpyevme.txt \
data/shpyurpa.dat \
data/shpyurpa.ini \
data/shpyurpa.txt \
data/shpyusra.dat \
data/shpyusra.ini \
data/shpyusra.txt \
data/shpzeksh.dat \
data/shpzeksh.ini \
data/shpzeksh.txt \
data/shpzfpst.dat \
data/shpzfpst.ini \
data/shpzfpst.txt \
data/stars.dat \
data/version.txt \
data/victoryditty.dat \
data/vobject.ini \
data/scpgui/logo.bmp \
data/scpgui/menuaccept.wav \
data/scpgui/menudisabled.wav \
data/scpgui/menufocus.wav \
data/scpgui/menuspecial.wav \
data/scpgui/scptitle.bmp \
data/scpgui/titlemusic.wav

gamedatadir=$(datadir)/tw-light
gamedata_DATA = $(GAMEDATA)

desktopdir = $(datadir)/applications
desktop_DATA = tw-light.desktop

appicondir = $(datadir)/icons
appicon_DATA = tw-light.png

EXTRA_DIST = \
	THANKS \
	autogen.sh \
	dat.vcxproj \
	dat.vcxproj.filters \
	grabber.vcxproj \
	grabber.vcxproj.filters \
	tw-light.ico \
	tw-light.rc \
	tw-light.desktop \
	tw-light.png \
	tw-light.sln \
	tw-light.vcxproj \
	tw-light.vcxproj.filters \
	doc/Doxyfile \
	doc/permissions.txt \
	scripts/stacktrace.pl \
	scripts/gen_register_ships.py \
	scripts/timewarp.nsi \
        scripts/gen_datafiles_interface.py \
        scripts/update_victory_ditty.py
	$(GAMEDATA)


.PHONY: ChangeLog indent
	git log > ChangeLog

indent:
	find src -type f "(" -name "*.c" -o -name "*.cpp" -o -name "*.h" ")" | xargs -i{} -t bcpp -bcl -yb -t {}
	find src -type f "(" -name "*.c" -o -name "*.cpp" -o -name "*.h" ")" | xargs -i{} -t python -c 'import sys;import re;f = open(sys.argv[1], "rb");data = f.read().decode();f.close();data = data.replace("if(", "if (");data = re.sub(r"}\s+else\s+{", "} else {", data, re.M);f = open(sys.argv[1], "wb");f.write(data.encode());f.close();' {}


