noinst_LIBRARIES=libinternal.a

INCLUDES = -I$(top_srcdir) $(allegro_CFLAGS)

SRCS= \
	agup/agtk.c \
	agup/version \
	agup/awin95.h \
	agup/aphoton.h \
	agup/abeos.h \
	agup/aalg.c \
	agup/agtk.h \
	agup/abitmap.c \
	agup/ans.h \
	agup/awin95.c \
	agup/agupitrn.h \
	agup/aase.c \
	agup/agup.c \
	agup/aphoton.c \
	agup/aase.h \
	agup/abeos.c \
	agup/ans.c \
	agup/aalg.h \
	agup/agup.h


libinternal_a_SOURCES = $(SRCS)

